tests/snapshots/examples_fixtures/type_classes__MultiEffectTracerExample__Flow__Tracer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/MultiEffectTracerExample/Flow/Tracer.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `MultiEffectTracerExample.Flow.Tracer` doesn't match file path `examples/type_classes/MultiEffectTracerExample/Flow/Tracer.flx`.

  examples/type_classes/MultiEffectTracerExample/Flow/Tracer.flx:1:1
  |
1 | module MultiEffectTracerExample.Flow.Tracer {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
